modified search and update record function and report and help sections were added